fix: Refrescar pagina, creacion Update: Estados de interes